--- a/docs/工程化记录.md
+++ b/docs/工程化记录.md
@@ -1,6 +1,23 @@
 # 拆分配置策略
+
 拆分成：
   * 入口文件：webpack.config.js
   * 公共配置：webpack.common.js
   * 开发配置：webapck.development.js
   * 生产配置：webpack.production.js
+
+---
+
+# React.StrictMode
+
+StrictMode 目前有助于：
+
+  1、识别不安全的生命周期
+  2、关于使用过时字符串 ref API 的警告
+  3、关于使用废弃的 findDOMNode 方法的警告
+  4、检测意外的副作用
+  5、检测过时的 context API
+
+---
+  
+  
